--- a/src/app.html
+++ b/src/app.html
@@ -7,6 +7,8 @@
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(./dirt.webp);">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
