--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/img/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(./dirt.webp);">
+	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(%sveltekit.assets%/img/dirt.webp);">
 		<div style="display: contents">
 			%sveltekit.body%
 		</div>
