--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.16c71b1d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.6903b5a2.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.e049f9e1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ff06a07f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.07292709.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c73355b8.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.690ecdde.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.459d2770.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.6d2d2822.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.61b21631.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.d02f58b0.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.3f5dfa03.js">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_rt5euq = {
+					__sveltekit_d2h8j5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.6903b5a2.js"),
-						import("./_app/immutable/entry/app.459d2770.js")
+						import("./_app/immutable/entry/start.e049f9e1.js"),
+						import("./_app/immutable/entry/app.6d2d2822.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
