--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 		<link rel="icon" href="./img/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.16c71b1d.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.e049f9e1.js">
+		<link href="./_app/immutable/assets/0.5294bb4c.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.afd4de28.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ff06a07f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c73355b8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.690ecdde.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6d2d2822.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.099a7cee.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.1fa83eca.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a7bd7252.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.61b21631.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.d02f58b0.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.3f5dfa03.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.2dab6632.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.f169fd99.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(./img/dirt.webp);">
 		<div style="display: contents">
-			  <table class="h-screen w-screen max-w-full"><tr class="h-1/5 w-full text-center text-white" style="background-image: url(/img/grass.webp); background-repeat: repeat-x;" data-svelte-h="svelte-1t883i1"><img class="mx-auto m-5" src="/img/Server-Scanner.webp" alt=""></tr> <tr class="w-full h-full"><div class="w-full h-1/2 mt-6"> <div class="flex h-full mx-auto md:w-2/5 min-w-fit items-center"><div class="flex w-full max-h-24 bg-gray-300 border-4 rounded-xl border-black p-4 items-end"><form action="" class="w-full"><table class="md:h-14 md:text-xl sm:text-sm rounded-xl" style="font-family: minecraft-regular;">  <tr class="mt-5"><td class="w-4/6 h-full"><input placeholder="Search for servers with similar IPs..." class="placeholder:text-slate-400 pl-5 pr-2 w-full h-full rounded-l-xl" type="text"></td> <td class="w-1/6 h-full"><input placeholder="Amount" class="pr-5 pl-2 w-full h-full text-center placeholder:text-slate-400" type="text"></td> <td class="w-1/6 h-full"><button class="text-white w-full h-full bg-black focus:bg-gray-800 border-2 border-black rounded-r-xl font-bold py-2 md:text-xl sm:text-sm" data-svelte-h="svelte-1eq0hui">Search</button></td></tr></table></form></div></div></div></tr> <tr class="h-20 w-full text-center bg-yellow-950 text-white" data-svelte-h="svelte-4of2vm"> </tr></table> 
+			  <table class="h-screen w-screen max-w-full"><tr class="h-1/5 w-full text-center text-white" style="background-image: url(/img/grass.webp); background-repeat: repeat-x;"><img class="mx-auto m-5" src="/img/Server-Scanner.webp" alt=""></tr> <tr class="w-full h-full"><div class="w-full h-1/2 mt-6"> <div class="flex h-full mx-auto md:w-2/5 min-w-fit items-center"><div class="flex w-full max-h-24 bg-gray-300 border-4 rounded-xl border-black p-4 items-end"><form action="" class="w-full"><table class="md:h-14 md:text-xl sm:text-sm rounded-xl" style="font-family: minecraft-regular;">  <tr class="mt-5"><td class="w-4/6 h-full"><input placeholder="Search for servers with similar IPs..." class="placeholder:text-slate-400 pl-5 pr-2 w-full h-full rounded-l-xl" type="text"></td> <td class="w-1/6 h-full"><input placeholder="Amount" class="pr-5 pl-2 w-full h-full text-center placeholder:text-slate-400" type="text"></td> <td class="w-1/6 h-full"><button class="text-white w-full h-full bg-black focus:bg-gray-800 border-2 border-black rounded-r-xl font-bold py-2 md:text-xl sm:text-sm" data-svelte-h="svelte-1eq0hui">Search</button></td></tr></table></form></div></div></div></tr> <tr class="h-20 w-full text-center bg-yellow-950 text-white" data-svelte-h="svelte-4of2vm"> </tr></table> 
 			
 			<script>
 				{
-					__sveltekit_d2h8j5 = {
+					__sveltekit_4si0om = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.e049f9e1.js"),
-						import("./_app/immutable/entry/app.6d2d2822.js")
+						import("./_app/immutable/entry/start.afd4de28.js"),
+						import("./_app/immutable/entry/app.a7bd7252.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
