--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width" />
 		
 		<link href="./_app/immutable/assets/0.5294bb4c.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.13c3bc7a.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.9803a352.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ff06a07f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.8e72e190.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.92b235ea.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.8d19702e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.0339ed3c.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.d30451eb.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.b6e7df9f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.61b21631.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.2dab6632.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.7ae40a65.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.79708c39.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(./img/dirt.webp);">
 		<div style="display: contents">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_102sboz = {
+					__sveltekit_xft5pb = {
 						assets: "/mc-pinger",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -32,8 +32,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.13c3bc7a.js"),
-						import("./_app/immutable/entry/app.8d19702e.js")
+						import("./_app/immutable/entry/start.9803a352.js"),
+						import("./_app/immutable/entry/app.b6e7df9f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
