--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./img/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.f1fa6455.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0cb7ac76.js">
+		<link href="./_app/immutable/assets/0.faa387e1.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.7ff8d0ec.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.ff06a07f.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9c7b7814.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.37ab5239.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.6b0ba392.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.214383fa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.89f80375.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.44ca85da.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.61b21631.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.7e775317.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.af36624b.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.3f3eecc6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.704b0b3a.js">
 	</head>
 	<body data-sveltekit-preload-data="hover" class="bg-repeat max-xl:bg-auto" style="background-image: url(./img/dirt.webp);">
 		<div style="display: contents">
@@ -21,7 +21,7 @@
 			
 			<script>
 				{
-					__sveltekit_1jw99it = {
+					__sveltekit_19kgopc = {
 						assets: "/mc-pinger",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -32,8 +32,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0cb7ac76.js"),
-						import("./_app/immutable/entry/app.6b0ba392.js")
+						import("./_app/immutable/entry/start.7ff8d0ec.js"),
+						import("./_app/immutable/entry/app.44ca85da.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
